# rustowl

./: .gitignore  .luacheckrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PKGBUILD  PKGBUILD-GIT  README.md  SECURITY.md  build.rs  default.nix  flake.nix  version.sh
.chglog/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  changelog.yml  check.yaml  release.yaml
aur/: PKGBUILD  PKGBUILD-GIT
backend/: Cargo.toml  rust-toolchain.toml  setup.sh
backend/src/: main.rs
backend/visuarust-core/: Cargo.toml  README.md  test.rs
backend/visuarust-core/src/: lib.rs  models.rs
docs/: CODE_OF_CONDUCT.md  installation.md  lsp-spec.md  usage.md
emacs/: rustowl.el  rustowlsp-autoloads.el  rustowlsp.el
example/: all.rs  scope.rs
frontend/: next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/editor/: CodeMirror.tsx
frontend/src/utils/: api.ts  dataAnalyzer.ts
ftplugin/: rust.lua
lua/: rustowl.lua
lua/rustowl/: config.lua  highlight.lua  hover.lua  init.lua  lsp.lua  show-on-hover.lua
plugin/: rustowl-auto.lua  rustowlsp.lua
rustowl/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  install.sh  rust-toolchain.toml
rustowl-server/: Cargo.toml  install.sh  rust-toolchain.toml
rustowl-server/rustowl-core/: Cargo.toml
rustowl-server/rustowl-core/src/: analyze.rs  lib.rs  models.rs
rustowl-server/src/: main.rs
rustowl-vscode/: package.json  sample.rs
rustowl-vscode/src/: analyze.ts  decos.ts  extension.ts  range.ts
rustowl-vscode/src/api/: request.ts  schemas.ts
rustowl/completions/: _rustowl  _rustowl.ps1  rustowl.bash  rustowl.elv  rustowl.fish  rustowl.nu
rustowl/man/: rustowl.1
rustowl/models/: Cargo.toml
rustowl/models/src/: lib.rs
rustowl/rustowl-core/: Cargo.toml
rustowl/rustowl-core/src/: analyze.rs  from_rustc.rs  lib.rs  models.rs
rustowl/src/: cli.rs  core.rs  lib.rs  lsp.rs  main.rs  models.rs  owlc.rs  owlsp.rs  toolchain_version.rs  utils.rs
rustowl/src/core/: analyze.rs  from_rustc.rs
rustowl/src/lsp/: decoration.rs
scripts/: bump.sh
src/: cli.rs  lsp.rs  models.rs  shells.rs  toolchain.rs
src/lsp/: backend.rs  decoration.rs  progress.rs
visuarust-vscode/: CHANGELOG.md  README.md  package.json
visuarust-vscode/src/: analyze.ts  decos.ts  extension.ts  range.ts
visuarust-vscode/src/api/: request.ts  schemas.ts
vscode/: README.md  package.json  sample.rs  tsconfig.json
vscode/src/: analyze.ts  bootstrap.ts  extension.ts  range.ts  schemas.ts
