[package]
name = "rustowl"
version = "0.3.0"
edition = "2024"
authors = ["cordx56 <cordx56@cordx.cx>"]
description = "Visualize Ownership and Lifetimes in Rust"
documentation = "https://github.com/cordx56/rustowl/blob/main/README.md"
readme = "README.md"
repository = "https://github.com/cordx56/rustowl"
license = "MPL-2.0"
keywords = ["visualization", "ownership", "lifetime", "lsp"]
categories = ["development-tools", "visualization"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.135"
log = "0.4.22"
simple_logger = { version = "5.0.0", features = ["stderr"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-std", "io-util", "process", "fs"] }
tower-lsp = "0.20.0"
process_alive = "0.1.1"
cargo_metadata = "0.19.2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.5.35", features = ["cargo"] }
tar = "0.4.44"
flate2 = "1.1.1"
reqwest = { version = "0.12.15", features = ["rustls-tls"] }
clap_complete_nushell = "4.5.5"
clap_complete = "4.5.47"
zip = "2.6.1"

[build-dependencies]
clap_complete_nushell = "4.5.5"
clap_complete = "4.5.47"
clap_mangen = "0.2.26"
clap = { version = "4.5.35", features = ["cargo"]  }

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"

# This is cited from [rustc](https://github.com/rust-lang/rust/blob/1.86.0/compiler/rustc/Cargo.toml).
# MIT License
[target.'cfg(unix)'.dependencies.tikv-jemalloc-sys]
version = "0.6.0"
optional = true
features = ['unprefixed_malloc_on_supported_platforms']

[features]
default = ["jemalloc"]
jemalloc = ['dep:tikv-jemalloc-sys']

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[package.metadata.rust-analyzer]
rustc_private = true

# edit on next release
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/runtime-{ target }{ archive-suffix }"
# pkg-url = "{ repo }/releases/download/v{ version }/rustowl-{ target }{ archive-suffix }"
disabled-strategies = ["quick-install", "compile"]

# [package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
# pkg-fmt = "zip"

# [package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
# pkg-fmt = "zip"
