[package]
name = "visuarust-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["visuarust-core"]
[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
log = "0.4.22"

[dependencies]
visuarust-core = { path = "./visuarust-core" }
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
serde.workspace = true
log.workspace = true
simple_logger = "5.0.0"
