[package]
name = "rustowl-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["rustowl-core"]
[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.135"
log = "0.4.22"

[dependencies]
rustowl-core = { path = "./rustowl-core" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
simple_logger = { version = "5.0.0", features = ["stderr"] }
