[package]
name = "rustowl"
version = "0.0.4"
edition = "2021"
default-run = "cargo-owl"

[workspace]
members = ["models", "rustowl-core"]
[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.135"
log = "0.4.22"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-std", "io-util", "process"] }

[dependencies]
rustowl-core = { path = "./rustowl-core" }
models = { path = "./models" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
simple_logger = { version = "5.0.0", features = ["stderr"] }
tokio.workspace = true
tower-lsp = "0.20.0"
mktemp = "0.5.1"

[[bin]]
name = "cargo-owl"
path = "src/main.rs"

[[bin]]
name = "rustowlc"
path = "src/owlc.rs"

[[bin]]
name = "cargo-owlsp"
path = "src/owlsp.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
