[package]
name = "rustowl"
version = "0.2.0"
edition = "2024"
authors = ["cordx56 <cordx56@cordx.cx>"]
description = "Visualize Ownership and Lifetimes in Rust"
documentation = "https://github.com/cordx56/rustowl/blob/main/README.md"
readme = "README.md"
repository = "https://github.com/cordx56/rustowl"
license = "MPL-2.0"
keywords = ["visualization", "ownership", "lifetime", "lsp"]
categories = ["development-tools", "visualization"]
default-run = "rustowl"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.135"
log = "0.4.22"
simple_logger = { version = "5.0.0", features = ["stderr"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-std", "io-util", "process"] }
tower-lsp = "0.20.0"
mktemp = "0.5.1"
process_alive = "0.1.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"

[[bin]]
name = "rustowlc"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[package.metadata.rust-analyzer]
rustc_private = true
