[package]
name = "rustowl"
version = "0.2.2"
edition = "2024"
authors = ["cordx56 <cordx56@cordx.cx>"]
description = "Visualize Ownership and Lifetimes in Rust"
documentation = "https://github.com/cordx56/rustowl/blob/main/README.md"
readme = "README.md"
repository = "https://github.com/cordx56/rustowl"
license = "MPL-2.0"
keywords = ["visualization", "ownership", "lifetime", "lsp"]
categories = ["development-tools", "visualization"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.135"
log = "0.4.22"
simple_logger = { version = "5.0.0", features = ["stderr"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-std", "io-util", "process", "fs"] }
tower-lsp = "0.20.0"
process_alive = "0.1.1"
cargo_metadata = "0.19.2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.5.35", features = ["cargo"] }
tar = "0.4.44"
flate2 = "1.1.1"
reqwest = "0.12.15"

[build-dependencies]
tar = "0.4.44"
flate2 = "1.1.1"
dunce = "1.0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"

# This is cited from [rustc](https://github.com/rust-lang/rust/blob/1.86.0/compiler/rustc/Cargo.toml).
# MIT License
[target.'cfg(unix)'.dependencies.tikv-jemalloc-sys]
version = "0.6.0"
optional = true
features = ['unprefixed_malloc_on_supported_platforms']

[features]
default = ["jemalloc"]
jemalloc = ['dep:tikv-jemalloc-sys']

[[bin]]
name = "rustowlc"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[package.metadata.rust-analyzer]
rustc_private = true
